--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>jenkins测试</title>
-  <link rel="shortcut icon" type="image/x-icon" href="static/images/favicon.ico">
+  <script src="https://unpkg.com/lodash@4.16.6"></script>
 </head>
 <body>
   <div id="app"></div>
+  <script src="./src/index.js"></script>
 </body>
 </html>
